--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .hero{
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 100vh;
     background: #eff4fd;
@@ -29,4 +29,25 @@ span{
 .details p{
     color: #555;
     line-height: 22px;
+}
+
+.images{
+    width: 45%;
+    height: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 100px;
+}
+
+.images img{
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 15%;
+    transform: translateX(-50%);
+    transition: bottom 1s, left 1s; 
+}
+
+.images:hover .myself{
+    left: 45%;
 }
