--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Times New Roman';
 }
 
-.container{
+.container {
     position: fixed;
     display: grid;
     width: 100%;
     height: 100vh;
     background: #eff4fd;
     grid-template-columns: 1fr 1fr;
+    overflow: scroll;
 }
 
 .main-content{
